--- a/app/src/main/res/layout/user_recycler_view.xml
+++ b/app/src/main/res/layout/user_recycler_view.xml
@@ -3,11 +3,11 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
         android:id="@+id/user_cardview"
-        card_view:cardConnerRadius="3dp"
+        card_view:cardCornerRadius="3dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp">
@@ -15,13 +15,12 @@
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:padding="10dp"
+            android:layout_height="wrap_content"
             >
 
             <ImageView
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_height="150dp"
                 android:layout_weight="3"
                 android:id="@+id/userPhoto"
                 android:contentDescription="@string/user_photo_description"
@@ -34,18 +33,18 @@
                 android:layout_weight="7"
                 android:orientation="vertical"
                 android:gravity="center_vertical"
-                android:paddingLeft="5dp">
+                android:paddingLeft="10dp">
 
                 <TextView
                     android:id="@+id/userId"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     style="@style/TextTheme"/>
 
                 <TextView
                     android:id="@+id/userName"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     style="@style/TextTheme" />
             </LinearLayout>
 
