--- a/app/src/main/res/layout/activity_user_details.xml
+++ b/app/src/main/res/layout/activity_user_details.xml
@@ -2,7 +2,7 @@
 <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/user_swipelayout"
+        android:id="@+id/user_details_swipelayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
