--- a/app/src/main/res/layout/activity_user_details.xml
+++ b/app/src/main/res/layout/activity_user_details.xml
@@ -6,7 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".UserDetailsActivity">
+        tools:context=".view.userdetails.UserDetailsActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/user_details_recyclerview"
